# controller/authcontroller.go
@@ -1,0 +1,90 @@
+package controller
+
+import (
+	"final/models"
+	"fmt"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
+)
+
+type UserAuth struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+// LoginUser godoc
+// @Summary Login as as user.
+// @Description Logging in to get jwt token to access admin or user api by roles.
+// @Tags Auth
+// @Param Body body UserAuth true "the body to login a user"
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Router /login [post]
+func Login(ctx *gin.Context) {
+	db := ctx.MustGet("db").(*gorm.DB)
+	var input UserAuth
+
+	if err := ctx.ShouldBindJSON(&input); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	u := models.User{}
+
+	u.Username = input.Username
+	u.Password = input.Password
+
+	token, err := models.LoginCheck(u.Username, u.Password, db)
+
+	if err != nil {
+		fmt.Println(err)
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "username or password is incorrect."})
+		return
+	}
+
+	user := map[string]string{
+		"username": u.Username,
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{"message": "login success", "user": user, "token": token})
+
+}
+
+// Register godoc
+// @Summary Register a user.
+// @Description registering a user from public access.
+// @Tags Auth
+// @Param Body body UserAuth true "the body to register a user"
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Router /register [post]
+func Register(c *gin.Context) {
+	db := c.MustGet("db").(*gorm.DB)
+	var input UserAuth
+
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	u := models.User{}
+
+	u.Username = input.Username
+	u.Password = input.Password
+
+	_, err := u.SaveUser(db)
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	user := map[string]string{
+		"username": input.Username,
+	}
+
+	c.JSON(http.StatusOK, gin.H{"message": "registration success", "user": user})
+
+}
