# controller/c_user.go
@@ -2,6 +2,7 @@ package controller
 
 import (
 	"final/models"
+	"fmt"
 	"net/http"
 	"time"
 
@@ -18,6 +19,8 @@ type UserInput struct {
 // @Summary geting all data user
 // @Description getting all data user which includes username n password
 // @Tags User
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
 // @Produce json
 // @Success 200 {object} []models.User
 // @router /User [get]
@@ -36,14 +39,17 @@ func Getalluser(ctx *gin.Context) {
 // @Description creating all data user which input username n password
 // @Tags User
 // @param Body body UserInput true "the body to create new user"
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
 // @Produce json
 // @Success 200 {object} []models.User
 // @router /User [post]
 func CreateUser(ctx *gin.Context) {
 	var input UserInput
-	if err := ctx.ShouldBind(&input); err != nil {
+	if err := ctx.ShouldBindJSON(&input); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 	}
+	fmt.Println(input.Password)
 	users := models.User{Username: input.Username, Password: input.Password}
 	db := ctx.MustGet("db").(*gorm.DB)
 
@@ -58,13 +64,15 @@ func CreateUser(ctx *gin.Context) {
 // @Tags User
 // @Produce json
 // @param id path string true "data user by id "
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
 // @Success 200 {object} []models.User
 // @router /User/{id} [get]
 func GetuserById(ctx *gin.Context) {
 	var users models.User
 	db := ctx.MustGet("db").(*gorm.DB)
 
-	if err := db.Where("user_id = ?", ctx.Param("id")).Find(&users).Error; err != nil {
+	if err := db.Where("id = ?", ctx.Param("id")).Find(&users).Error; err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": "record not found"})
 		return
 	}
@@ -79,6 +87,8 @@ func GetuserById(ctx *gin.Context) {
 // @Produce json
 // @param username path string true "update password by username"
 // @param Body body UserInput true "the body to updated password"
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
 // @Success 200 {object} []models.User
 // @router /User/username [patch]
 func UpdatePasswordUser(ctx *gin.Context) {
@@ -86,7 +96,7 @@ func UpdatePasswordUser(ctx *gin.Context) {
 	var users models.User
 	db := ctx.MustGet("db").(*gorm.DB)
 
-	if err := db.Where("user_username = ?", ctx.Param("username")).Find(&users).Error; err != nil {
+	if err := db.Where("username = ?", ctx.Param("username")).Find(&users).Error; err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": "record not found"})
 		return
 	}
@@ -94,13 +104,12 @@ func UpdatePasswordUser(ctx *gin.Context) {
 	//input data
 	var input UserInput
 
-	if err := ctx.ShouldBind(&input); err != nil {
+	if err := ctx.ShouldBindJSON(&input); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 	}
 
 	var updatedata models.User
 
-	updatedata.Username = input.Username
 	updatedata.Password = input.Password
 	updatedata.UpdateAt = time.Now()
 
@@ -114,13 +123,15 @@ func UpdatePasswordUser(ctx *gin.Context) {
 // @Tags User
 // @Produce json
 // @param id path string true "data user by id "
+// @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
+// @Security BearerToken
 // @Success 200 {object} map[string]boolean
 // @router /User/{id} [delete]
 func Deleteuser(ctx *gin.Context) {
 	var users models.User
 	db := ctx.MustGet("db").(*gorm.DB)
 
-	if err := db.Where("user_id = ?", ctx.Param("id")).Find(&users).Error; err != nil {
+	if err := db.Where("id = ?", ctx.Param("id")).Find(&users).Error; err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": "record not found"})
 		return
 	}
