# models/user.go
@@ -1,15 +1,72 @@
 package models
 
-import "time"
+import (
+	"final/utils/token"
+	"html"
+	"strings"
+	"time"
+
+	"golang.org/x/crypto/bcrypt"
+	"gorm.io/gorm"
+)
 
 type User struct {
 	ID       int    `gorm:"primary_key" json:"id"`
-	Username string `json:"username"`
-	Password string `json:"password"`
+	Username string `gorm:"not null; unique" json:"username"`
+	Password string `gorm:"not null; unique" json:"password"`
 
 	CreatedAt time.Time   `json:"created_at"`
 	UpdateAt  time.Time   `json:"update_at"`
 	Cart      []Cart      `json:"-"`
 	Orderitem []Orderitem `json:"-"`
 	Addres    []Addres    `json:"-"`
+}
+
+func VerifyPassword(password, hashedPassword string) error {
+	return bcrypt.CompareHashAndPassword([]byte(hashedPassword), []byte(password))
+}
+
+func LoginCheck(username string, password string, db *gorm.DB) (string, error) {
+
+	var err error
+
+	u := User{}
+
+	err = db.Model(User{}).Where("username = ?", username).Take(&u).Error
+
+	if err != nil {
+		return "", err
+	}
+
+	err = VerifyPassword(password, u.Password)
+
+	if err != nil && err == bcrypt.ErrMismatchedHashAndPassword {
+		return "", err
+	}
+
+	token, err := token.GenerateToken(u.ID)
+
+	if err != nil {
+		return "", err
+	}
+
+	return token, nil
+
+}
+
+func (u *User) SaveUser(db *gorm.DB) (*User, error) {
+	//turn password into hash
+	hashedPassword, errPassword := bcrypt.GenerateFromPassword([]byte(u.Password), bcrypt.DefaultCost)
+	if errPassword != nil {
+		return &User{}, errPassword
+	}
+	u.Password = string(hashedPassword)
+	//remove spaces in username
+	u.Username = html.EscapeString(strings.TrimSpace(u.Username))
+
+	var err error = db.Create(&u).Error
+	if err != nil {
+		return &User{}, err
+	}
+	return u, nil
 }
